Created a new branch
in this commit
- created the basic structure for the To-do list App.
- Used a function to dynamically get data from an array of objects and display it in the list.

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
     <title>To Do List</title>
   </head>
   <body>
-    <h1>Hello webpack!</h1>
+    <div class="heading">
+      <h1>Today's To do</h1>
+      <i class="fa-solid fa-arrows-rotate"></i>
+    </div>
+    <div class="todo-list">
+      <div class="list-head">
+        <input type="text" placeholder="Add to your list" />
+      </div>
+
+      <div class="tasks"></div>
+      <div class="clear">
+        <button>Clear all completed</button>
+      </div>
+    </div>
   </body>
 </html>
